# rust-readme-chess

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
rust_readme_chess/: Cargo.toml
rust_readme_chess/src/: config.rs  lib.rs  main.rs
rust_readme_chess/src/controllers/: controller.rs  mod.rs
rust_readme_chess/src/services/: chess_service.rs  engine_service.rs  github_service.rs
rust_readme_chess/src/utils/: mod.rs  printer.rs  validator.rs
rust_readme_chess/tests/: chess_service_tests.rs  engine_service_test.rs  move_validator_tests.rs  printer_tests.rs
src/: config.rs  controller.rs  lib.rs  main.rs
src/controllers/: controller.rs  mod.rs
src/model/: board.rs  pieces.rs
src/service/: chess.rs  engine.rs  github.rs  mod.rs  pieceservice.rs
src/services/: chess_service.rs  engine_service.rs  github_service.rs  mod.rs
src/utils/: common.rs  constants.rs  mod.rs  printer.rs  validator.rs
tests/: chess_service_tests.rs  config.rs  controller.rs  engine_service_test.rs  github_service_tests.rs  model_board.rs  model_board_state.rs  model_pieces.rs  printer_tests.rs  printers_fen.rs  printers_markdown.rs  service_chess.rs  service_engine.rs  service_github.rs  service_pieceservice.rs  utils_common.rs  utils_constants.rs  utils_validator.rs
