[package]
name = "rust_readme_chess"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1.0.98"
chrono = "0.4.40"

[profile.release]
lto = true
